# Luvoy

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  install-minimal.txt  package-lock.json
backend/: Dockerfile  app.py  cleanup_students.py  config.py  debug_analyze.py  debug_graph.py  import_jobs.py  pyproject.toml  requirements.txt  run_server.py  seed_data.py  seed_fake_students.py
backend/models/: database.py  job.py  student.py
backend/prompts/: __init__.py  templates.py
backend/services/: job_analyzer.py  job_graph.py  llm_client.py  matching_engine.py  report_generator.py  resume_parser.py
backend/services/algorithms/: __init__.py  agent_orchestrator.py  ahp_service.py  attention_mechanism.py  bayesian_optimizer.py  career_ai_engine.py  deep_matching.py  embedding_service.py  ensemble_learning.py  graph_algorithm.py  graph_embedding.py  knowledge_graph.py  mcts_planner.py  mdp_planner.py  multi_objective.py  reinforcement_learning.py  semantic_embedding.py  skill_ontology.py
deploy/: .env.example  README.md  docker-compose.yml  server-deploy.sh
frontend/: ANDROID_BUILD.md  Dockerfile  capacitor.config.json  generate_icons.py  generate_qrcodes.py  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/android/app/: build.gradle
frontend/public/: manifest.json
frontend/src/: App.vue  main.js  style.css
frontend/src/api/: index.js
scripts/: generate_knowledge_base.py  generate_rag_knowledge.py  generate_rag_layered_kb.py  merge_knowledge_base.py
(+69 files in other folders)
