[project]
name = "luvoy-backend"
version = "1.0.0"
description = "Luvoy - AI大学生职业规划智能体平台后端"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web框架
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-sqlalchemy>=3.1.1",
    
    # LLM客户端
    "openai>=1.82.0",
    
    # 简历文件解析
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.2",
    
    # OCR支持
    "pytesseract>=0.3.10",
    "pymupdf>=1.24.0",
    
    # 报告导出
    "markdown>=3.7",
    "pdfkit>=1.0.0",
    
    # 数据处理
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    
    # 生产部署
    "gunicorn>=23.0.0",
    
    # 向量化与表征学习
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    
    # 图算法
    "networkx>=3.1",
    
    # 深度语义嵌入
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    
    # 图嵌入
    "gensim>=4.3.0",
    
    # 贝叶斯优化
    "scikit-optimize>=0.9.0",
    
    # 概率图模型
    "pgmpy>=0.1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]
